# morok

./: CMakeLists.txt  README.md  cross_build.sh
.github/actions/setup-llvm/: action.yml
.github/workflows/: ci.yml
docs/: algorithms.md  hardness.md  insurance-tasks.md
include/morok/config/: PassConfig.hpp
include/morok/ir/: SymbolCloak.hpp
include/morok/passes/: AdversarialFunctionMerging.hpp  AntiAnalysis.hpp  ArithmeticTables.hpp  ChaosStateMachine.hpp  ConstantEncryption.hpp  DataEntangledFlattening.hpp  DataFlowIntegrity.hpp  DispatcherlessRouting.hpp  ExternalSecretBinding.hpp  FunctionWrapper.hpp  InterproceduralFsm.hpp  MutualGuardGraph.hpp  NonInvertibleState.hpp  PerBuildPolymorphism.hpp  PhiTangling.hpp  RuntimeSeal.hpp  SelfChecksumConstants.hpp  ShamirShare.hpp  TracerAttestation.hpp  UniformPrimitiveLowering.hpp  Virtualization.hpp
include/morok/runtime/: PlatformRuntime.hpp
programs/: cf_license_crackme.c
src/config/: Preset.cpp  Resolver.cpp  TomlLoader.cpp
src/ir/: SymbolCloak.cpp
src/passes/: AdversarialFunctionMerging.cpp  AntiAnalysis.cpp  ArithmeticTables.cpp  CMakeLists.txt  CoherentDecoys.cpp  ConstantEncryption.cpp  DataEntangledFlattening.cpp  DataFlowIntegrity.cpp  DispatcherlessRouting.cpp  ExternalSecretBinding.cpp  FaultPagedPayload.cpp  FunctionCallObfuscate.cpp  FunctionWrapper.cpp  HashGatedSelfDecrypt.cpp  InterproceduralFsm.cpp  MicrocodeStress.cpp  MutualGuardGraph.cpp  Nanomites.cpp  NonInvertibleState.cpp  OptimizerAmplification.cpp  PerBuildPolymorphism.cpp  PhiTangling.cpp  RuntimeSeal.cpp  SealedBlob.cpp  SelfChecksumConstants.cpp  ShamirShare.cpp  StringEncryption.cpp  TraceKeying.cpp  TracerAttestation.cpp  VTableIntegrity.cpp  Virtualization.cpp
src/pipeline/: CMakeLists.txt  Plugin.cpp  Scheduler.cpp
src/runtime/: CMakeLists.txt  PlatformRuntime.cpp
tests/e2e/: CMakeLists.txt  adversarial_binary.py  adversarial_patch.sh  differential_vm.sh  dr_sentinel_fallback.sh  dr_sentinel_fallback.toml  portable.toml  release_audit_test.py  run_programs.sh  static_config_layering.sh  timing_false_positive.toml  timing_false_positive_clean_run.sh  trap_sigaction_preserve.sh  trap_sigaction_preserve.toml  vm.toml
tests/e2e/fixtures/: adversarial_integrity.c  dr_sentinel_fallback.c  timing_false_positive.c  trap_sigaction_preserve.c  vm_workload.c
tests/ir/: test_passes.cpp
tests/unit/config/: test_merge.cpp  test_preset.cpp  test_toml_loader.cpp
tools/: morok-audit.py
